--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     </div>
     {% endif %}
     {% if g.user %}
-    <div class="row ms-5">
+    <div class="row ms-5 mb-3">
         <h3>Some of your Favs</h3>
         <div class="col-md-4">
             {% if favs[0] %}
