--- a/templates/drinks/show.html
+++ b/templates/drinks/show.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title%}Search{% endblock %}
+{% block title%}{{drink.name}}{% endblock %}
 
 
 {% block content %}
